# satellite_dashboard

./: pyproject.toml
app/: main.py
app/api/v1/endpoints/: imagery.py  layers.py
app/core/: config.py
app/data/: layers.json
app/services/: gibs.py  tiles.py
app/static/: main.js
app/templates/: map.html
